# multiverse

./: .editorconfig  .gitignore  .python-version  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
multiverse/: line.py  reader.py  utils.py
multiverse/export/: cli.py  common.py
multiverse/grok/: cli.py  functions.py
